# master

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  sum_two_numbers.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  ai-stack.md  architecture.md  changelog.md  decisions.md  git-workflow.md  roadmap.md  usage.md
docs/runbooks/: ai-fallback.md
prompts/: bugfix.md  documentation.md  feature-implementation.md  recovery.md
scripts/: bootstrap.py  context_snapshot.py  healthcheck.py  scaffold_project.py
src/: main.py
src/sum_two_numbers/: __init__.py  cli.py
tests/: test_sum_two_numbers.py
