[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sum-two-numbers"
version = "0.1.0"
description = "A small command-line application that adds two numbers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Project Maintainer" }
]

[project.scripts]
sum-two-numbers = "sum_two_numbers.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
